<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_detail_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_title_toolbar"
                    style="@style/MonaSemiBold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="18dp"
                    android:fontFamily="@font/mona_sans_bold"
                    android:text="@string/title_home"
                    android:textColor="@color/charleston_green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical"
            android:background="@color/primary"
            pp:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MonaSemiBold16"
                android:text="@string/sub_title_home"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                style="@style/MonaMedium12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_home1"
                android:textColor="@color/white"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout1">

            <TextView
                style="@style/MonaSemiBold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_home2"
                android:textColor="@color/tertiary"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgProject"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_project" />

            <TextView
                style="@style/MonaMedium12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/desc_home2"
                android:textColor="@color/tertiary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/MonaSemiBold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sub_title_home3"
                android:textColor="@color/tertiary"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgProjectmobile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="start"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mobile" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgProjectweb"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/web" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/MonaSemiBold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="Mobile"
                    android:textColor="@color/light_grey"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    style="@style/MonaSemiBold14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="Web"
                    android:textColor="@color/light_grey"
                    app:layout_constraintStart_toStartOf="parent" />


            </LinearLayout>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
